@@ -8,7 +8,7 @@ ext {
 
     // module coordinates of dependencies:
     acorusCoordinates = 'com.github.stephengold:Acorus:0.9.9'
-    heartCoordinates = 'com.github.stephengold:Heart:7.3.0'
+    heartCoordinates = 'com.github.stephengold:Heart:7.4.0'
     jcommanderCoordinates = 'com.beust:jcommander:1.81'
     jme3utilitiesniftyCoordinates = 'com.github.stephengold:jme3-utilities-nifty:0.9.26'
 
@@ -23,7 +23,7 @@ targetCompatibility = JavaVersion.VERSION_1_8
 tasks.withType(JavaCompile) { // Java compile-time options:
     options.compilerArgs << '-Xdiags:verbose'
     options.compilerArgs << '-Xlint:unchecked'
-    options.deprecation = true
+    options.deprecation = true // to provide detailed deprecation warnings
     options.encoding = 'UTF-8'
 }
 
@@ -34,11 +34,10 @@ tasks.withType(JavaExec) { // Java runtime options:
     //jvmArgs '-Xbatch'
     //jvmArgs '-Xms512m', '-Xmx512m'
     //jvmArgs '-XX:+PrintCompilation'
-    //jvmArgs '-XX:+UseConcMarkSweepGC'
     jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
 }
 
 repositories {
-    //mavenLocal()
+    //mavenLocal() // to use local SNAPSHOTs of libraries
     mavenCentral()
 }
